[tool.poetry]
name = "wuff-wau"
version = "0.1.0"
description = "Project Wuff Wau"
authors = ["marcel schubert <marcel.schubert@ost.ch>"]
readme = "README.md"
packages = [{include = "wuff_wau"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.6.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wuff-wau = "wuff_wau.main:main"
